# gaokao-admission-emulator

.wasm/: admission_elements.h  admission_operations.c  gaokao-admission-emulator.js  gaokao-admission-emulator.wasm.map  main.c  merge_sort.c
source/: admission_elements.h  main.c
wasm/: file_operations.c  gaokao-admission-emulator.wasm  gaokao-admission-emulator.wasm.map  main.c  module.html  simple.html
wasm-module/: hello.c  hello.js  hello.wasm  module.html
wasm-test/: hello.c  hello.js  hello.wasm  hello_js.html  hello_js.js  hello_js.wasm  hello_wasm.html  hello_wasm.js  make_wasm.cmd  run_wasm.cmd  wasm.js  wasm.wasm
wasm-test/html_template/: my_page.html  page.html  simple.html
wasm/cmake/: CMakeLists.txt
www/: gaokao-admission-emulator.js  gaokao-admission-emulator.wasm  gaokao-admission-emulator.wasm.map  index.html
